--- a/uploadvideo/src/main/resources/templates/upload.html
+++ b/uploadvideo/src/main/resources/templates/upload.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<form action="#" method="post" enctype="multipart/form-data">
+<form action="" method="post" enctype="multipart/form-data">
     <input type="file" name="file" value="请选择视频文件">
     <input type="submit" value="上传">
 </form>
