--- a/downloadvideo/src/main/resources/templates/video_360p.html
+++ b/downloadvideo/src/main/resources/templates/video_360p.html
@@ -16,7 +16,7 @@
         </tr>
     </tbody></table>
     <video width="1280" height="720"  controls="controls" autoplay="autoplay">
-        <source src="/getVideo" type="video/mp4">
+        <source src="/getVideo_360p" type="video/mp4">
     </video>
 <!-- <video width="320" height="240" controls="controls" autoplay="autoplay">
     <source src="D://MP4//20210608_234659.mp4" type="video/mp4" />
